Add theme and setting section

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -5,8 +5,10 @@
   "login.button": "Log In",
   "login.description": "Log in to access your account.",
   "login.error.title": "Login Error",
-  "login.error.description": "Failed to login. Please check your credentials.",
+  "login.error.description": "Invalid credentials. Please check your email and password.",
   "login.teacher.signupPrompt": "Teacher? Don't have an account?",
+  "loading_auth": "Authenticating...",
+  "loading_user_space": "Loading your space...",
   "signup.title": "Create Teacher Account",
   "signup.button": "Sign Up",
   "signup.description": "Join NoteWise to manage your students and their practice.",
@@ -22,6 +24,7 @@
   "header.language": "Language",
   "header.english": "English",
   "header.farsi": "فارسی (Farsi)",
+  "header.toggleTheme": "Toggle theme",
   "teacherDashboard.title": "Teacher Dashboard",
   "teacherDashboard.description": "Manage your students and their practice routines.",
   "teacherDashboard.addStudent": "Add New Student",
@@ -61,6 +64,10 @@
   "student.practice.toast.error.description": "Failed to save practice log.",
   "student.practice.toast.error.studentNotFound": "Student data not found.",
   "student.practice.noSections": "No sections in this routine.",
+  "student.practice.logDateError.title": "Logging Restricted",
+  "student.practice.logDateError.description": "You can only log practice for this routine between {minDate} and {maxDate}.",
+  "student.practice.logDateError.notLoggable": "Practice cannot be logged for the selected date due to assignment restrictions.",
+  "student.practice.logDateError.missingAssignmentDate": "The assignment date for this routine is missing. Logging is disabled.",
   "page.home.title": "Master Your Music Practice",
   "page.home.description": "NoteWise helps music teachers assign and monitor student practice routines, making learning more effective and engaging.",
   "page.home.getStartedTeacher": "Get Started as a Teacher",
@@ -105,37 +112,39 @@
   "teacher.students.list.loading": "Loading students...",
   "teacher.students.addPage.backLink": "Back to Students List",
   "teacher.students.addPage.title": "Add New Student",
-  "teacher.students.addPage.description": "Enter the details for the new student account. Default password is \"password\".",
+  "teacher.students.addPage.description": "Enter the details for the new student account.",
   "teacher.students.addPage.form.fullName.label": "Student's Full Name",
   "teacher.students.addPage.form.fullName.placeholder": "e.g., Jane Doe",
   "teacher.students.addPage.form.email.label": "Student's Email (Username)",
   "teacher.students.addPage.form.email.placeholder": "student@example.com",
   "teacher.students.addPage.form.password.label": "Initial Password",
-  "teacher.students.addPage.form.password.helpText": "Default is \"password\". The student can be advised to change this later (not implemented in prototype).",
+  "teacher.students.addPage.form.password.placeholder": "Enter a secure password",
+  "teacher.students.addPage.form.password.helpText": "The student will use this password to log in. They can change it later.",
   "teacher.students.addPage.form.submitButton": "Add Student",
   "teacher.students.addPage.form.submitButtonLoading": "Adding Student...",
   "teacher.students.addPage.toast.added.title": "Student Added",
-  "teacher.students.addPage.toast.added.description": "{fullName} has been successfully added. Default password is \"password\".",
+  "teacher.students.addPage.toast.added.description": "{fullName} has been successfully added.",
   "teacher.students.addPage.toast.addError.title": "Error Adding Student",
   "teacher.students.addPage.toast.addError.emailExists": "A student with this email already exists.",
   "teacher.students.addPage.toast.addError.general": "Failed to add student. Please try again.",
   "teacher.students.addPage.validation.fullNameMin": "Full name must be at least 2 characters",
   "teacher.students.addPage.validation.emailInvalid": "Invalid email address",
   "teacher.students.addPage.validation.passwordMin": "Password must be at least 6 characters",
-  "teacher.students.managePage.backLink": "Back to Students List",
+  "teacher.students.managePage.backLink": "Back to Dashboard",
   "teacher.students.managePage.loading": "Loading student details...",
   "teacher.students.managePage.notFound.title": "Student Not Found",
   "teacher.students.managePage.notFound.description": "The student with ID \"{studentId}\" could not be found. They may have been removed or the link is incorrect.",
   "teacher.students.managePage.header.joinedDate": "Joined: {date}",
   "teacher.students.managePage.header.currentRoutine": "Current Routine: {routineName}",
+  "teacher.students.managePage.header.currentRoutineAssignedOn": "Assigned on: {date}",
   "teacher.students.managePage.header.noRoutineAssigned": "None assigned",
-  "teacher.students.managePage.header.routinesAssigned": "Routines Assigned: {count}",
+  "teacher.students.managePage.header.routinesAssigned": "Total Routines Assigned: {count}",
   "teacher.students.managePage.assignRoutine.title": "Assign Practice Routine",
   "teacher.students.managePage.assignRoutine.description": "Select a template and start date to assign a new routine to {displayName}.",
   "teacher.students.managePage.assignRoutine.template.label": "Practice Routine Template",
   "teacher.students.managePage.assignRoutine.template.placeholder": "Select a routine template",
   "teacher.students.managePage.assignRoutine.template.noTemplates": "No templates available",
-  "teacher.students.managePage.assignRoutine.startDate.label": "Week Start Date",
+  "teacher.students.managePage.assignRoutine.startDate.label": "Assignment Start Date (Week)",
   "teacher.students.managePage.assignRoutine.startDate.placeholder": "Pick a date",
   "teacher.students.managePage.assignRoutine.submitButton": "Assign Routine",
   "teacher.students.managePage.assignRoutine.submitButtonLoading": "Assigning...",
@@ -222,6 +231,36 @@
   "teacher.routines.editPage.toast.error.updateFailed": "Failed to update template. Please try again.",
   "teacher.routines.validation.templateNameMin": "Template name must be at least 3 characters",
   "teacher.routines.validation.sectionsMin": "At least one practice section is required",
-  "teacher.routines.validation.sectionNameRequired": "Section name is required"
+  "teacher.routines.validation.sectionNameRequired": "Section name is required",
+  "settings.title": "Settings",
+  "settings.account.title": "Account Information",
+  "settings.account.description": "Manage your account details.",
+  "settings.account.email.label": "Email (Username)",
+  "settings.account.displayName.label": "Display Name",
+  "settings.account.saveButton": "Save Account Changes",
+  "settings.account.success.title": "Account Updated",
+  "settings.account.displayName.success.description": "Your display name has been updated.",
+  "settings.password.title": "Change Password",
+  "settings.password.description.teacher": "Update your account password. This only applies if you signed up; the demo teacher password cannot be changed here.",
+  "settings.password.description.student": "Manage your account password.",
+  "settings.password.current.label": "Current Password",
+  "settings.password.new.label": "New Password",
+  "settings.password.confirm.label": "Confirm New Password",
+  "settings.password.saveButton": "Change Password",
+  "settings.password.success.title": "Password Updated",
+  "settings.password.success.description": "Your password has been successfully changed for this session.",
+  "settings.password.demo.title": "Demo Account",
+  "settings.password.demo.description": "The password for the demo teacher account (teacher@example.com) cannot be changed through this interface.",
+  "settings.password.student.success.description": "Your password has been successfully changed.",
+  "settings.password.student.error.currentPasswordIncorrect": "The current password you entered is incorrect.",
+  "settings.password.student.error.updateFailed": "Failed to update password. Please try again.",
+  "settings.theme.title": "Appearance",
+  "settings.theme.description": "Choose how NoteWise looks to you.",
+  "settings.theme.light": "Light",
+  "settings.theme.dark": "Dark",
+  "settings.theme.system": "System",
+  "settings.theme.changed.title": "Theme Updated",
+  "settings.theme.changed.description": "Theme changed to {theme}.",
+  "settings.error.title": "Update Error",
+  "settings.error.generic": "An error occurred. Please try again."
 }
-
