--- a/src/locales/fa.json
+++ b/src/locales/fa.json
@@ -5,8 +5,10 @@
   "login.button": "ورود",
   "login.description": "برای دسترسی به حساب کاربری خود وارد شوید.",
   "login.error.title": "خطای ورود",
-  "login.error.description": "ورود ناموفق بود. لطفاً اطلاعات خود را بررسی کنید.",
+  "login.error.description": "اطلاعات ورود نامعتبر است. لطفاً ایمیل و رمز عبور خود را بررسی کنید.",
   "login.teacher.signupPrompt": "معلم هستید؟ حساب کاربری ندارید؟",
+  "loading_auth": "در حال احراز هویت...",
+  "loading_user_space": "در حال بارگذاری فضای شما...",
   "signup.title": "ایجاد حساب کاربری معلم",
   "signup.button": "ثبت نام",
   "signup.description": "به نوت‌وایز بپیوندید تا دانش‌آموزان و تمریناتشان را مدیریت کنید.",
@@ -22,6 +24,7 @@
   "header.language": "زبان",
   "header.english": "English (انگلیسی)",
   "header.farsi": "فارسی",
+  "header.toggleTheme": "تغییر پوسته",
   "teacherDashboard.title": "داشبورد معلم",
   "teacherDashboard.description": "دانش‌آموزان و برنامه‌های تمرینی آنها را مدیریت کنید.",
   "teacherDashboard.addStudent": "افزودن دانش‌آموز جدید",
@@ -61,6 +64,10 @@
   "student.practice.toast.error.description": "خطا در ذخیره گزارش تمرین.",
   "student.practice.toast.error.studentNotFound": "اطلاعات دانش‌آموز یافت نشد.",
   "student.practice.noSections": "هیچ بخشی در این برنامه تمرینی وجود ندارد.",
+  "student.practice.logDateError.title": "ثبت گزارش محدود شده",
+  "student.practice.logDateError.description": "شما تنها می‌توانید تمرین برای این برنامه را بین تاریخ {minDate} و {maxDate} ثبت کنید.",
+  "student.practice.logDateError.notLoggable": "به دلیل محدودیت‌های تخصیص، امکان ثبت تمرین برای تاریخ انتخابی وجود ندارد.",
+  "student.practice.logDateError.missingAssignmentDate": "تاریخ تخصیص این برنامه مشخص نیست. ثبت گزارش غیرفعال است.",
   "page.home.title": "در تمرین موسیقی خود استاد شوید",
   "page.home.description": "نوت‌وایز به معلمان موسیقی کمک می‌کند تا برنامه‌های تمرینی دانش‌آموزان را تعیین و نظارت کنند و یادگیری را موثرتر و جذاب‌تر سازند.",
   "page.home.getStartedTeacher": "به عنوان معلم شروع کنید",
@@ -105,37 +112,39 @@
   "teacher.students.list.loading": "در حال بارگذاری دانش آموزان...",
   "teacher.students.addPage.backLink": "بازگشت به لیست دانش‌آموزان",
   "teacher.students.addPage.title": "افزودن دانش‌آموز جدید",
-  "teacher.students.addPage.description": "مشخصات حساب کاربری دانش‌آموز جدید را وارد کنید. رمز عبور پیش‌فرض «password» است.",
+  "teacher.students.addPage.description": "مشخصات حساب کاربری دانش‌آموز جدید را وارد کنید.",
   "teacher.students.addPage.form.fullName.label": "نام کامل دانش‌آموز",
   "teacher.students.addPage.form.fullName.placeholder": "مثال: سارا احمدی",
   "teacher.students.addPage.form.email.label": "ایمیل دانش‌آموز (نام کاربری)",
   "teacher.students.addPage.form.email.placeholder": "student@example.com",
   "teacher.students.addPage.form.password.label": "رمز عبور اولیه",
-  "teacher.students.addPage.form.password.helpText": "پیش‌فرض «password» است. دانش‌آموز می‌تواند بعداً آن را تغییر دهد (در این نمونه اولیه پیاده‌سازی نشده است).",
+  "teacher.students.addPage.form.password.placeholder": "یک رمز عبور امن وارد کنید",
+  "teacher.students.addPage.form.password.helpText": "دانش‌آموز با این رمز وارد می‌شود. او می‌تواند بعداً آن را تغییر دهد.",
   "teacher.students.addPage.form.submitButton": "افزودن دانش‌آموز",
   "teacher.students.addPage.form.submitButtonLoading": "در حال افزودن دانش‌آموز...",
   "teacher.students.addPage.toast.added.title": "دانش‌آموز افزوده شد",
-  "teacher.students.addPage.toast.added.description": "{fullName} با موفقیت افزوده شد. رمز عبور پیش‌فرض «password» است.",
+  "teacher.students.addPage.toast.added.description": "{fullName} با موفقیت افزوده شد.",
   "teacher.students.addPage.toast.addError.title": "خطا در افزودن دانش‌آموز",
   "teacher.students.addPage.toast.addError.emailExists": "دانش‌آموزی با این ایمیل قبلاً ثبت شده است.",
   "teacher.students.addPage.toast.addError.general": "افزودن دانش‌آموز ناموفق بود. لطفاً دوباره تلاش کنید.",
   "teacher.students.addPage.validation.fullNameMin": "نام کامل باید حداقل ۲ کاراکتر باشد",
   "teacher.students.addPage.validation.emailInvalid": "آدرس ایمیل نامعتبر است",
   "teacher.students.addPage.validation.passwordMin": "رمز عبور باید حداقل ۶ کاراکتر باشد",
-  "teacher.students.managePage.backLink": "بازگشت به لیست دانش‌آموزان",
+  "teacher.students.managePage.backLink": "بازگشت به داشبورد",
   "teacher.students.managePage.loading": "در حال بارگذاری مشخصات دانش‌آموز...",
   "teacher.students.managePage.notFound.title": "دانش‌آموز یافت نشد",
   "teacher.students.managePage.notFound.description": "دانش‌آموز با شناسه «{studentId}» یافت نشد. ممکن است حذف شده باشد یا پیوند نادرست باشد.",
   "teacher.students.managePage.header.joinedDate": "تاریخ عضویت: {date}",
   "teacher.students.managePage.header.currentRoutine": "برنامه فعلی: {routineName}",
+  "teacher.students.managePage.header.currentRoutineAssignedOn": "اختصاص یافته در: {date}",
   "teacher.students.managePage.header.noRoutineAssigned": "هیچ برنامه‌ای اختصاص داده نشده",
-  "teacher.students.managePage.header.routinesAssigned": "برنامه‌های اختصاص یافته: {count}",
+  "teacher.students.managePage.header.routinesAssigned": "مجموع برنامه‌های اختصاص یافته: {count}",
   "teacher.students.managePage.assignRoutine.title": "اختصاص برنامه تمرینی",
   "teacher.students.managePage.assignRoutine.description": "یک قالب و تاریخ شروع برای اختصاص برنامه جدید به {displayName} انتخاب کنید.",
   "teacher.students.managePage.assignRoutine.template.label": "قالب برنامه تمرینی",
   "teacher.students.managePage.assignRoutine.template.placeholder": "یک قالب برنامه انتخاب کنید",
   "teacher.students.managePage.assignRoutine.template.noTemplates": "هیچ قالبی موجود نیست",
-  "teacher.students.managePage.assignRoutine.startDate.label": "تاریخ شروع هفته",
+  "teacher.students.managePage.assignRoutine.startDate.label": "تاریخ شروع تخصیص (هفته)",
   "teacher.students.managePage.assignRoutine.startDate.placeholder": "یک تاریخ انتخاب کنید",
   "teacher.students.managePage.assignRoutine.submitButton": "اختصاص برنامه",
   "teacher.students.managePage.assignRoutine.submitButtonLoading": "در حال اختصاص...",
@@ -222,6 +231,36 @@
   "teacher.routines.editPage.toast.error.updateFailed": "به‌روزرسانی قالب ناموفق بود. لطفاً دوباره تلاش کنید.",
   "teacher.routines.validation.templateNameMin": "نام قالب باید حداقل ۳ کاراکتر باشد",
   "teacher.routines.validation.sectionsMin": "حداقل یک بخش تمرین الزامی است",
-  "teacher.routines.validation.sectionNameRequired": "نام بخش الزامی است"
+  "teacher.routines.validation.sectionNameRequired": "نام بخش الزامی است",
+  "settings.title": "تنظیمات",
+  "settings.account.title": "اطلاعات حساب کاربری",
+  "settings.account.description": "مشخصات حساب کاربری خود را مدیریت کنید.",
+  "settings.account.email.label": "ایمیل (نام کاربری)",
+  "settings.account.displayName.label": "نام نمایشی",
+  "settings.account.saveButton": "ذخیره تغییرات حساب",
+  "settings.account.success.title": "حساب به‌روزرسانی شد",
+  "settings.account.displayName.success.description": "نام نمایشی شما به‌روزرسانی شد.",
+  "settings.password.title": "تغییر رمز عبور",
+  "settings.password.description.teacher": "رمز عبور حساب خود را به‌روز کنید. این تنها در صورتی اعمال می‌شود که ثبت‌نام کرده باشید؛ رمز عبور معلم دمو قابل تغییر نیست.",
+  "settings.password.description.student": "رمز عبور حساب خود را مدیریت کنید.",
+  "settings.password.current.label": "رمز عبور فعلی",
+  "settings.password.new.label": "رمز عبور جدید",
+  "settings.password.confirm.label": "تکرار رمز عبور جدید",
+  "settings.password.saveButton": "تغییر رمز عبور",
+  "settings.password.success.title": "رمز عبور به‌روزرسانی شد",
+  "settings.password.success.description": "رمز عبور شما برای این جلسه با موفقیت تغییر کرد.",
+  "settings.password.demo.title": "حساب دمو",
+  "settings.password.demo.description": "رمز عبور حساب معلم دمو (teacher@example.com) از طریق این رابط قابل تغییر نیست.",
+  "settings.password.student.success.description": "رمز عبور شما با موفقیت تغییر کرد.",
+  "settings.password.student.error.currentPasswordIncorrect": "رمز عبور فعلی که وارد کردید نادرست است.",
+  "settings.password.student.error.updateFailed": "به‌روزرسانی رمز عبور ناموفق بود. لطفاً دوباره تلاش کنید.",
+  "settings.theme.title": "ظاهر برنامه",
+  "settings.theme.description": "انتخاب کنید نوت‌وایز چگونه به نظر برسد.",
+  "settings.theme.light": "روشن",
+  "settings.theme.dark": "تاریک",
+  "settings.theme.system": "سیستم",
+  "settings.theme.changed.title": "پوسته به‌روزرسانی شد",
+  "settings.theme.changed.description": "پوسته به {theme} تغییر کرد.",
+  "settings.error.title": "خطا در به‌روزرسانی",
+  "settings.error.generic": "خطایی رخ داد. لطفاً دوباره تلاش کنید."
 }
-
