Add progress bar and practice chart

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -30,6 +30,7 @@
   "teacherDashboard.addStudent": "Add New Student",
   "teacherDashboard.manageRoutines": "Manage Routines",
   "teacherDashboard.myStudents": "My Students",
+  "teacherDashboard.progressLabel": "Current Routine Progress:",
   "teacherDashboard.loadingStudents": "Loading students...",
   "teacherDashboard.noStudents.title": "No Students Yet",
   "teacherDashboard.noStudents.description": "Start by adding your first student to assign practice routines.",
@@ -68,6 +69,9 @@
   "student.practice.logDateError.description": "You can only log practice for this routine between {minDate} and {maxDate}.",
   "student.practice.logDateError.notLoggable": "Practice cannot be logged for the selected date due to assignment restrictions.",
   "student.practice.logDateError.missingAssignmentDate": "The assignment date for this routine is missing. Logging is disabled.",
+  "student.practice.progress.title": "Current Routine Progress",
+  "student.practice.progress.idealTimeNote": "Your goal for this 8-day period is {time} minutes.",
+  "student.practice.idealTimePerSection": "Ideal: {time} min",
   "page.home.title": "Master Your Music Practice",
   "page.home.description": "NoteWise helps music teachers assign and monitor student practice routines, making learning more effective and engaging.",
   "page.home.getStartedTeacher": "Get Started as a Teacher",
@@ -119,7 +123,7 @@
   "teacher.students.addPage.form.email.placeholder": "student@example.com",
   "teacher.students.addPage.form.password.label": "Initial Password",
   "teacher.students.addPage.form.password.placeholder": "Enter a secure password",
-  "teacher.students.addPage.form.password.helpText": "The student will use this password to log in. They can change it later.",
+  "teacher.students.addPage.form.password.helpText": "The student will use this password to log in and can change it later.",
   "teacher.students.addPage.form.submitButton": "Add Student",
   "teacher.students.addPage.form.submitButtonLoading": "Adding Student...",
   "teacher.students.addPage.toast.added.title": "Student Added",
@@ -158,6 +162,7 @@
   "teacher.students.managePage.practiceProgress.title": "View Practice Progress",
   "teacher.students.managePage.practiceProgress.description": "Summary of {displayName}'s submitted daily practice logs.",
   "teacher.students.managePage.practiceProgress.noLogs": "No practice logs submitted yet.",
+  "teacher.students.managePage.practiceProgress.noLogsForCurrent": "No practice logs submitted yet for the current routine assignment.",
   "teacher.students.managePage.practiceProgress.table.date": "Date",
   "teacher.students.managePage.practiceProgress.table.routine": "Routine",
   "teacher.students.managePage.practiceProgress.table.time": "Time (min)",
@@ -178,6 +183,12 @@
   "teacher.students.managePage.logDetails.totalTime": "Total Time: {time} min",
   "teacher.students.managePage.logDetails.noSectionsData": "No section data recorded.",
   "teacher.students.managePage.logDetails.closeButton": "Close",
+  "teacher.students.managePage.chart.title": "Daily Practice Chart",
+  "teacher.students.managePage.chart.description": "Practice time for routine \"{routineName}\" assigned on {startDate}.",
+  "teacher.students.managePage.chart.yAxisLabel": "Time (minutes)",
+  "teacher.students.managePage.chart.actualPracticeLabel": "Actual Practice",
+  "teacher.students.managePage.chart.idealPracticeLabel": "Ideal Daily Time",
+  "teacher.students.managePage.chart.noData": "No practice data to display for this assignment period yet.",
   "teacher.routines.page.title": "Practice Routine Templates",
   "teacher.routines.page.description": "Create, edit, or delete your practice routine templates.",
   "teacher.routines.page.createButton": "Create New Template",
@@ -209,6 +220,9 @@
   "teacher.routines.form.sections.name.placeholder": "e.g., C Major Scale",
   "teacher.routines.form.sections.description.label": "Section Description/Instructions (Optional)",
   "teacher.routines.form.sections.description.placeholder": "e.g., Two octaves, hands together, focus on even rhythm.",
+  "teacher.routines.form.sections.idealDailyTime.label": "Ideal Daily Practice Time (minutes)",
+  "teacher.routines.form.sections.idealDailyTime.placeholder": "e.g., 15",
+  "teacher.routines.form.idealWeeklyTimeInfo": "Calculated Ideal Weekly Practice Time: {time} minutes (for 8-day period).",
   "teacher.routines.form.addSectionButton": "Add Practice Section",
   "teacher.routines.createPage.submitButton": "Create Template",
   "teacher.routines.createPage.submitButtonLoading": "Saving Template...",
@@ -232,6 +246,7 @@
   "teacher.routines.validation.templateNameMin": "Template name must be at least 3 characters",
   "teacher.routines.validation.sectionsMin": "At least one practice section is required",
   "teacher.routines.validation.sectionNameRequired": "Section name is required",
+  "teacher.routines.validation.idealTimeMin": "Ideal time must be a non-negative number.",
   "settings.title": "Settings",
   "settings.account.title": "Account Information",
   "settings.account.description": "Manage your account details.",
@@ -264,3 +279,4 @@
   "settings.error.title": "Update Error",
   "settings.error.generic": "An error occurred. Please try again."
 }
+
