--- a/src/locales/fa.json
+++ b/src/locales/fa.json
@@ -30,6 +30,7 @@
   "teacherDashboard.addStudent": "افزودن دانش‌آموز جدید",
   "teacherDashboard.manageRoutines": "مدیریت برنامه‌ها",
   "teacherDashboard.myStudents": "دانش‌آموزان من",
+  "teacherDashboard.progressLabel": "پیشرفت برنامه فعلی:",
   "teacherDashboard.loadingStudents": "در حال بارگذاری دانش‌آموزان...",
   "teacherDashboard.noStudents.title": "هنوز دانش‌آموزی ندارید",
   "teacherDashboard.noStudents.description": "با افزودن اولین دانش‌آموز خود شروع کنید تا برنامه‌های تمرینی اختصاص دهید.",
@@ -68,6 +69,9 @@
   "student.practice.logDateError.description": "شما تنها می‌توانید تمرین برای این برنامه را بین تاریخ {minDate} و {maxDate} ثبت کنید.",
   "student.practice.logDateError.notLoggable": "به دلیل محدودیت‌های تخصیص، امکان ثبت تمرین برای تاریخ انتخابی وجود ندارد.",
   "student.practice.logDateError.missingAssignmentDate": "تاریخ تخصیص این برنامه مشخص نیست. ثبت گزارش غیرفعال است.",
+  "student.practice.progress.title": "پیشرفت برنامه فعلی",
+  "student.practice.progress.idealTimeNote": "هدف شما برای این دوره ۸ روزه، {time} دقیقه است.",
+  "student.practice.idealTimePerSection": "ایده‌آل: {time} دقیقه",
   "page.home.title": "در تمرین موسیقی خود استاد شوید",
   "page.home.description": "نوت‌وایز به معلمان موسیقی کمک می‌کند تا برنامه‌های تمرینی دانش‌آموزان را تعیین و نظارت کنند و یادگیری را موثرتر و جذاب‌تر سازند.",
   "page.home.getStartedTeacher": "به عنوان معلم شروع کنید",
@@ -119,7 +123,7 @@
   "teacher.students.addPage.form.email.placeholder": "student@example.com",
   "teacher.students.addPage.form.password.label": "رمز عبور اولیه",
   "teacher.students.addPage.form.password.placeholder": "یک رمز عبور امن وارد کنید",
-  "teacher.students.addPage.form.password.helpText": "دانش‌آموز با این رمز وارد می‌شود. او می‌تواند بعداً آن را تغییر دهد.",
+  "teacher.students.addPage.form.password.helpText": "دانش‌آموز با این رمز وارد می‌شود و می‌تواند بعداً آن را تغییر دهد.",
   "teacher.students.addPage.form.submitButton": "افزودن دانش‌آموز",
   "teacher.students.addPage.form.submitButtonLoading": "در حال افزودن دانش‌آموز...",
   "teacher.students.addPage.toast.added.title": "دانش‌آموز افزوده شد",
@@ -158,6 +162,7 @@
   "teacher.students.managePage.practiceProgress.title": "مشاهده پیشرفت تمرین",
   "teacher.students.managePage.practiceProgress.description": "خلاصه‌ای از گزارش‌های تمرین روزانه ارسال شده توسط {displayName}.",
   "teacher.students.managePage.practiceProgress.noLogs": "هنوز هیچ گزارش تمرینی ارسال نشده است.",
+  "teacher.students.managePage.practiceProgress.noLogsForCurrent": "هنوز هیچ گزارش تمرینی برای تخصیص فعلی برنامه ارسال نشده است.",
   "teacher.students.managePage.practiceProgress.table.date": "تاریخ",
   "teacher.students.managePage.practiceProgress.table.routine": "برنامه",
   "teacher.students.managePage.practiceProgress.table.time": "زمان (دقیقه)",
@@ -178,6 +183,12 @@
   "teacher.students.managePage.logDetails.totalTime": "مجموع زمان: {time} دقیقه",
   "teacher.students.managePage.logDetails.noSectionsData": "هیچ داده‌ای برای بخش‌ها ثبت نشده.",
   "teacher.students.managePage.logDetails.closeButton": "بستن",
+  "teacher.students.managePage.chart.title": "نمودار تمرین روزانه",
+  "teacher.students.managePage.chart.description": "زمان تمرین برای برنامه «{routineName}» اختصاص یافته در {startDate}.",
+  "teacher.students.managePage.chart.yAxisLabel": "زمان (دقیقه)",
+  "teacher.students.managePage.chart.actualPracticeLabel": "تمرین واقعی",
+  "teacher.students.managePage.chart.idealPracticeLabel": "زمان ایده‌آل روزانه",
+  "teacher.students.managePage.chart.noData": "هنوز داده تمرینی برای نمایش در این دوره تخصیص وجود ندارد.",
   "teacher.routines.page.title": "قالب‌های برنامه تمرینی",
   "teacher.routines.page.description": "قالب‌های برنامه تمرینی خود را ایجاد، ویرایش یا حذف کنید.",
   "teacher.routines.page.createButton": "ایجاد قالب جدید",
@@ -209,6 +220,9 @@
   "teacher.routines.form.sections.name.placeholder": "مثال: گام دو ماژور",
   "teacher.routines.form.sections.description.label": "توضیحات/دستورالعمل‌های بخش (اختیاری)",
   "teacher.routines.form.sections.description.placeholder": "مثال: دو اکتاو، هر دو دست، تمرکز بر ریتم یکنواخت.",
+  "teacher.routines.form.sections.idealDailyTime.label": "زمان تمرین روزانه ایده‌آل (دقیقه)",
+  "teacher.routines.form.sections.idealDailyTime.placeholder": "مثال: ۱۵",
+  "teacher.routines.form.idealWeeklyTimeInfo": "زمان تمرین هفتگی ایده‌آل محاسبه شده: {time} دقیقه (برای دوره ۸ روزه).",
   "teacher.routines.form.addSectionButton": "افزودن بخش تمرین",
   "teacher.routines.createPage.submitButton": "ایجاد قالب",
   "teacher.routines.createPage.submitButtonLoading": "در حال ذخیره قالب...",
@@ -232,6 +246,7 @@
   "teacher.routines.validation.templateNameMin": "نام قالب باید حداقل ۳ کاراکتر باشد",
   "teacher.routines.validation.sectionsMin": "حداقل یک بخش تمرین الزامی است",
   "teacher.routines.validation.sectionNameRequired": "نام بخش الزامی است",
+  "teacher.routines.validation.idealTimeMin": "زمان ایده‌آل باید عددی غیرمنفی باشد.",
   "settings.title": "تنظیمات",
   "settings.account.title": "اطلاعات حساب کاربری",
   "settings.account.description": "مشخصات حساب کاربری خود را مدیریت کنید.",
