Add resume section

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -124,6 +124,7 @@
   "teacher.students.addPage.form.password.label": "Initial Password",
   "teacher.students.addPage.form.password.placeholder": "Enter a secure password",
   "teacher.students.addPage.form.password.helpText": "The student will use this password to log in and can change it later.",
+  "teacher.students.addPage.form.password.helpTextNowSaves": "The student will use this password to log in. This password will be saved.",
   "teacher.students.addPage.form.submitButton": "Add Student",
   "teacher.students.addPage.form.submitButtonLoading": "Adding Student...",
   "teacher.students.addPage.toast.added.title": "Student Added",
@@ -277,6 +278,38 @@
   "settings.theme.changed.title": "Theme Updated",
   "settings.theme.changed.description": "Theme changed to {theme}.",
   "settings.error.title": "Update Error",
-  "settings.error.generic": "An error occurred. Please try again."
+  "settings.error.generic": "An error occurred. Please try again.",
+  "teacher.resume.title": "My Professional Resume",
+  "teacher.resume.description": "Showcase your musical background, experience, and teaching style.",
+  "teacher.resume.sidebarLink": "My Resume",
+  "teacher.resume.form.shortBio.label": "Short Bio/Introduction",
+  "teacher.resume.form.shortBio.placeholder": "A brief introduction about yourself for potential students...",
+  "teacher.resume.form.instrumentsTaught.label": "Instruments Taught (Core)",
+  "teacher.resume.form.instrumentsTaught.placeholder": "e.g., Piano, Guitar, Vocals",
+  "teacher.resume.form.musicGenres.label": "Music Genres Specialized In",
+  "teacher.resume.form.musicGenres.placeholder": "e.g., Classical, Jazz, Rock, Pop",
+  "teacher.resume.form.yearsTeaching.label": "Years of Teaching Experience",
+  "teacher.resume.form.formalEducation.label": "Formal Music Education/Degrees",
+  "teacher.resume.form.formalEducation.placeholder": "e.g., Bachelor of Music from University X, Grade 8 ABRSM Piano",
+  "teacher.resume.form.teachingPhilosophy.label": "Teaching Philosophy/Approach",
+  "teacher.resume.form.teachingPhilosophy.placeholder": "Describe your teaching style and methods...",
+  "teacher.resume.form.yearsPerforming.label": "Years of Professional Performance (Optional)",
+  "teacher.resume.form.bandOrchestraMemberships.label": "Prominent Band/Orchestra Memberships (Optional)",
+  "teacher.resume.form.bandOrchestraMemberships.placeholder": "e.g., Lead Guitarist for 'The Rockers', Violinist in City Symphony",
+  "teacher.resume.form.certifications.label": "Relevant Certifications",
+  "teacher.resume.form.certifications.placeholder": "e.g., Suzuki Method Certified, Music Teacher Certification Level X",
+  "teacher.resume.form.honorsMemberships.label": "Honors, Awards, and Memberships (Optional)",
+  "teacher.resume.form.honorsMemberships.placeholder": "e.g., 'Best Teacher Award 2023', Member of National Music Teachers Association",
+  "teacher.resume.form.saveButton": "Save Resume",
+  "teacher.resume.form.savingButton": "Saving...",
+  "teacher.resume.toast.saved.title": "Resume Saved",
+  "teacher.resume.toast.saved.description": "Your professional information has been updated.",
+  "teacher.resume.toast.error.description": "Failed to save your resume. Please try again.",
+  "teacher.resume.yearsValue": "{count} years",
+  "student.teacherProfile.title": "{teacherName}'s Profile",
+  "student.teacherProfile.yourTeacher": "Your Teacher",
+  "student.teacherProfile.menuLink": "My Teacher",
+  "student.teacherProfile.noTeacher.title": "No Teacher Assigned",
+  "student.teacherProfile.noTeacher.description": "You are not currently assigned to a teacher. Please contact support or your institution.",
+  "student.teacherProfile.noResume": "Your teacher has not yet filled out their profile information."
 }
-
