--- a/src/locales/fa.json
+++ b/src/locales/fa.json
@@ -124,6 +124,7 @@
   "teacher.students.addPage.form.password.label": "رمز عبور اولیه",
   "teacher.students.addPage.form.password.placeholder": "یک رمز عبور امن وارد کنید",
   "teacher.students.addPage.form.password.helpText": "دانش‌آموز با این رمز وارد می‌شود و می‌تواند بعداً آن را تغییر دهد.",
+  "teacher.students.addPage.form.password.helpTextNowSaves": "دانش‌آموز با این رمز وارد می‌شود. این رمز عبور ذخیره خواهد شد.",
   "teacher.students.addPage.form.submitButton": "افزودن دانش‌آموز",
   "teacher.students.addPage.form.submitButtonLoading": "در حال افزودن دانش‌آموز...",
   "teacher.students.addPage.toast.added.title": "دانش‌آموز افزوده شد",
@@ -277,5 +278,38 @@
   "settings.theme.changed.title": "پوسته به‌روزرسانی شد",
   "settings.theme.changed.description": "پوسته به {theme} تغییر کرد.",
   "settings.error.title": "خطا در به‌روزرسانی",
-  "settings.error.generic": "خطایی رخ داد. لطفاً دوباره تلاش کنید."
+  "settings.error.generic": "خطایی رخ داد. لطفاً دوباره تلاش کنید.",
+  "teacher.resume.title": "رزومه حرفه‌ای من",
+  "teacher.resume.description": "پیشینه موسیقی، تجربه و سبک تدریس خود را به نمایش بگذارید.",
+  "teacher.resume.sidebarLink": "رزومه من",
+  "teacher.resume.form.shortBio.label": "بیوگرافی کوتاه/معرفی",
+  "teacher.resume.form.shortBio.placeholder": "یک معرفی کوتاه از خودتان برای دانش‌آموزان احتمالی...",
+  "teacher.resume.form.instrumentsTaught.label": "سازهای تدریسی (اصلی)",
+  "teacher.resume.form.instrumentsTaught.placeholder": "مثال: پیانو، گیتار، آواز",
+  "teacher.resume.form.musicGenres.label": "ژانرهای موسیقی تخصصی",
+  "teacher.resume.form.musicGenres.placeholder": "مثال: کلاسیک، جز، راک، پاپ",
+  "teacher.resume.form.yearsTeaching.label": "سال‌های تجربه تدریس",
+  "teacher.resume.form.formalEducation.label": "تحصیلات رسمی موسیقی/مدارک",
+  "teacher.resume.form.formalEducation.placeholder": "مثال: کارشناسی موسیقی از دانشگاه X، گرید ۸ پیانو ABRSM",
+  "teacher.resume.form.teachingPhilosophy.label": "فلسفه/رویکرد تدریس",
+  "teacher.resume.form.teachingPhilosophy.placeholder": "سبک و روش تدریس خود را توصیف کنید...",
+  "teacher.resume.form.yearsPerforming.label": "سال‌های اجرای حرفه‌ای (اختیاری)",
+  "teacher.resume.form.bandOrchestraMemberships.label": "عضویت در گروه‌ها/ارکسترهای برجسته (اختیاری)",
+  "teacher.resume.form.bandOrchestraMemberships.placeholder": "مثال: گیتاریست اصلی گروه 'راکرها'، ویولونیست در سمفونی شهر",
+  "teacher.resume.form.certifications.label": "گواهینامه‌های مرتبط",
+  "teacher.resume.form.certifications.placeholder": "مثال: گواهی متد سوزوکی، گواهی معلمی موسیقی سطح X",
+  "teacher.resume.form.honorsMemberships.label": "افتخارات، جوایز و عضویت‌ها (اختیاری)",
+  "teacher.resume.form.honorsMemberships.placeholder": "مثال: 'جایزه بهترین معلم سال ۲۰۲۳'، عضو انجمن ملی معلمان موسیقی",
+  "teacher.resume.form.saveButton": "ذخیره رزومه",
+  "teacher.resume.form.savingButton": "در حال ذخیره...",
+  "teacher.resume.toast.saved.title": "رزومه ذخیره شد",
+  "teacher.resume.toast.saved.description": "اطلاعات حرفه‌ای شما به‌روزرسانی شد.",
+  "teacher.resume.toast.error.description": "ذخیره رزومه ناموفق بود. لطفاً دوباره تلاش کنید.",
+  "teacher.resume.yearsValue": "{count} سال",
+  "student.teacherProfile.title": "پروفایل {teacherName}",
+  "student.teacherProfile.yourTeacher": "معلم شما",
+  "student.teacherProfile.menuLink": "معلم من",
+  "student.teacherProfile.noTeacher.title": "معلمی به شما اختصاص داده نشده",
+  "student.teacherProfile.noTeacher.description": "در حال حاضر به هیچ معلمی اختصاص داده نشده‌اید. لطفاً با پشتیبانی یا موسسه خود تماس بگیرید.",
+  "student.teacherProfile.noResume": "معلم شما هنوز اطلاعات پروفایل خود را تکمیل نکرده است."
 }
